[gd_scene load_steps=3 format=3 uid="uid://b3qub2i06lfxd"]

[ext_resource type="Texture2D" uid="uid://qta85a4ghfbv" path="res://Pixel Images - Free/Background/Brown.png" id="1_hf5hp"]
[ext_resource type="Script" path="res://scenes/death_screen.gd" id="2_etrsx"]

[node name="Death Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_etrsx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hf5hp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="restartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../quitButton")
text = "Restart
"

[node name="optionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Options"

[node name="quitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../restartButton")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 145.0
offset_right = 38.0
offset_bottom = 181.0
grow_horizontal = 2
scale = Vector2(2, 2)
bbcode_enabled = true
text = "You have died."

[connection signal="pressed" from="VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
